testdata/baselines/reference/submodule/compiler/moduleSharesNameWithImportDeclarationInsideIt6.errors.txt
moduleSharesNameWithImportDeclarationInsideIt6.ts(7,18): error TS2694: Namespace 'Z' has no exported member 'M'.


==== moduleSharesNameWithImportDeclarationInsideIt6.ts (1 errors) ====
    module Z.M {
        export function bar() {
            return "";
        }
    }
    module A.M {
        import M = Z.M;
                     ~
!!! error TS2694: Namespace 'Z' has no exported member 'M'.
        export function bar() {
        }
    }